# StarLed

./: .gitignore
.agents/: CLAUDE.md  slplayer_insights_prompt.md
.agents/rules/: architecture.md  backend-first.md  conventions.md
.agents/workflow/: checkpoint.md  fase-1.md  fase-2.md  fase-3.md  fase-p.md  new-task.md
huidu-docs/: CLAUDE.md  TASKS.md
huidu-docs/docs/: HUIDU_API.md  LICENSE_MODULE.md  UI_LAYOUT.md  (+1 more)
huidu-manager/: .env  .env.example  cli_test.py  cli_test_proto.py  main.py  presentations_cache.json  pyproject.toml  requirements.txt  scratch_test_time.py  scratch_test_xml_methods.py  slplayer.db
huidu-manager/app/: __init__.py
huidu-manager/app/api/: __init__.py  auth_signer.py  device_api.py  discovery.py  file_api.py  huidu_client.py  program_api.py
huidu-manager/app/auth/: __init__.py  license_cache.py  license_client.py  mac_helper.py
huidu-manager/app/core/: __init__.py  app_manager.py  db.py  file_uploader.py  json_builder.py  payload_generator.py  presentation_model.py  scheduler.py  screen_manager.py
huidu-manager/app/ui/: __init__.py  login_dialog.py  main_window.py  preview_area.py  screen_settings.py  sidebar.py  toolbar.py  workers.py
huidu-manager/app/ui/dialogs/: clock_dialog.py  image_dialog.py  schedule_dialog.py  text_dialog.py  video_dialog.py
huidu-manager/assets/: style.qss
huidu-manager/tests/: __init__.py  conftest.py  test_auth_signer.py  test_device_program_api.py  test_file_api.py  test_huidu_client.py  test_json_builder.py  test_license_client.py  test_presentation_model.py  test_screen_manager.py
(+8 files in other folders)
